[package]
name = "zephyr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.4"
tokio = { version = "1.27.0", features = ["full"] }
tree-sitter = "0.20.9"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
tree-sitter-rust = "0.20.3"
actix-web = "4.3.1"
actix-rt = "2.8.0"
