[package]
name = "zephyr_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.4"
tokio = { version = "1.27.0", features = ["full"] }
vercel_runtime = "0.3.4"
tree-sitter = "0.20.9"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
tree-sitter-rust = "0.20.3"
hyper = "0.14.25"

[[bin]]
name = "handler"
path = "api/handler.rs"
